syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.kerala.client.internal";

// --------------------------------------------------------------------------------------
// Service Definition
//
// @see CLIENTSPEC.md for contract details.

service KeralaClientService {
    rpc KeralaClientCommand (KeralaCommandRequest) returns (KeralaCommandResponse) {}
    rpc KeralaTopicProducer (stream KeralaProducerRequest) returns (stream KeralaProducerResponse) {}
    rpc KeralaTopicConsumer (stream KeralaConsumerRequest) returns (stream KeralaConsumerResponse) {}
}

// --------------------------------------------------------------------------------------
// Command Contract

message KeralaCommandRequest {
    string command = 1;
    repeated KeralaArgPair args = 3;
}

message KeralaArgPair {
    string param = 1;
    string arg = 2;
}

message KeralaCommandResponse {
    /* response string contains a json object that the client can parse */
    string response = 1;
    uint32 response_code = 2;
}

// --------------------------------------------------------------------------------------
// Producer Contract

message KeralaProducerResponse {
    uint32 response_code = 1;
}

message KeralaProducerRequest {
    string topic = 1;
    repeated KeralaKV kvs = 2;
}

message KeralaKV {
    bytes key = 1;
    bytes value = 2;
    uint64 timestamp = 3;
}

// --------------------------------------------------------------------------------------
// Consumer Contract

message KeralaConsumerRequest {
    string topic = 1;
    int64 offset = 2;
}

message KeralaConsumerResponse {
    string topic = 1;
    uint64 offset = 2;
    repeated KeralaKV kvs = 3;
    uint32 response_code = 4;
}
